src/components/About/about.module.scss
@use '@/styles/partials' as *;

.about {
	@include sectionsMargin;

	padding: 30px;
}

.infoWrap {
	@include flex;
	@include flexCenter;

	gap: 20px;

	.selfieSide {
		max-width: 550px;
		padding: 10px;

		.selfie {
			max-width: 430px;
			height: auto;
			border-radius: 25px;
			position: relative;
			display: flex;
			align-items: center;
		}
	}

	.textSide {
		max-width: 60%;
		font-size: $text-small;
		letter-spacing: 1px;
		padding: 15px;

		h3 {
			margin-bottom: 50px;
			font-size: $text-small;
		}

		p {
			font-weight: 300;
			margin-bottom: 30px;
		}
	}
}

.resumeFileBtn {
	a {
		@include buttonPattern;

		background-color: $link-dark;
		border: 1px solid $gray;
		font-size: $text-small;
		padding: 12px 42px;
		display: inline-block;
		font-weight: 600;
		letter-spacing: 0.8px;

		&:hover {
			background-color: $bg-lighter;
		}
	}
}

@media (max-width: $screen-desktop) {
	.infoWrap {
		flex-direction: column;

		.textSide {
			max-width: 100%;
			text-align: center;
		}
	}

	.resumeFileBtn {
		@include flex;
		@include flexCenter;
	}
}

